# serializer version: 1
# name: test_all_entities[time.test_trmnl_sleep_end_time-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'time',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'time.test_trmnl_sleep_end_time',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Sleep end time',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Sleep end time',
    'platform': 'trmnl',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'sleep_end_time',
    'unique_id': '42793_sleep_end_time',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[time.test_trmnl_sleep_end_time-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Test TRMNL Sleep end time',
    }),
    'context': <ANY>,
    'entity_id': 'time.test_trmnl_sleep_end_time',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '08:00:00',
  })
# ---
# name: test_all_entities[time.test_trmnl_sleep_start_time-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'time',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'time.test_trmnl_sleep_start_time',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Sleep start time',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Sleep start time',
    'platform': 'trmnl',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'sleep_start_time',
    'unique_id': '42793_sleep_start_time',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[time.test_trmnl_sleep_start_time-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Test TRMNL Sleep start time',
    }),
    'context': <ANY>,
    'entity_id': 'time.test_trmnl_sleep_start_time',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '22:00:00',
  })
# ---
